# MPC

./: .gitignore  README.md
src/dm_hw/: CMakeLists.txt  package.xml
src/dm_hw/include/dm_hw/: DmHW.h  DmHWLoop.h  damiao.h
src/dm_hw/src/: DmHW.cpp  DmHWLoop.cpp  damiao.cpp
src/dm_imu/: CMakeLists.txt  imu.xml  package.xml
src/dm_imu/include/dm_imu/: imu_driver.h
src/dm_imu/launch/: dm_rviz.launch  run_without_rviz.launch
src/dm_imu/rviz/: imu.rviz
src/dm_imu/src/: imu_driver.cpp  test_imu.cpp
src/dmbot_serial/include/dmbot_serial/: robot_connect.h
src/dmbot_serial/launch/: test_motor.launch
src/dmbot_serial/src/: robot_connect.cpp  test_motor.cpp
src/legged_control/: package.xml
src/legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
src/legged_controllers/cfg/: Tutorials.cfg
src/legged_controllers/config/: controllers.yaml  joy.yaml
src/legged_controllers/config/dm/: gait.info  reference.info  reference_sim.info  task.info  task_sim.info
src/legged_controllers/include/legged_controllers/: DmController.h  LeggedController.h  SafetyChecker.h  TargetTrajectoriesPublisher.h  utilities.h
src/legged_controllers/include/legged_controllers/visualization/: LeggedSelfCollisionVisualization.h
src/legged_controllers/launch/: load_controller_real.launch  load_controller_sim.launch  one_start_gazebo.launch  one_start_real.launch  rosbag_topic.launch  start_rqt_reconfigure.launch
src/legged_controllers/src/: DmController.cpp  LeggedController.cpp  TargetTrajectoriesPublisher.cpp  utilities.cpp
src/legged_dm_description/launch/: empty_world.launch
src/legged_dm_hw/: CMakeLists.txt  package.xml
src/legged_dm_hw/config/: dm.yaml  motor_test.yaml  motor_test_controllers.yaml
src/legged_dm_hw/include/legged_dm_hw/: DmHW.h
src/legged_dm_hw/launch/: legged_dm_hw.launch  motor_test.launch
src/legged_dm_hw/src/: DmHW.cpp  legged_dm_hw.cpp
src/legged_estimation/: CMakeLists.txt  package.xml
src/legged_estimation/include/legged_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
src/legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
src/legged_examples/legged_dm_description/urdf/: dm.urdf
src/legged_examples/legged_dm_hw/include/legged_dm_hw/: DmHW.h
src/legged_examples/legged_dm_hw/launch/: legged_dm_hw.launch
src/legged_examples/legged_dm_hw/src/: DmHW.cpp
src/legged_gazebo/: CMakeLists.txt  legged_dm_sim_plugins.xml  package.xml
src/legged_gazebo/config/: default.yaml
src/legged_gazebo/include/legged_gazebo/: LeggedHWSim.h
src/legged_gazebo/launch/: empty_world.launch
src/legged_gazebo/src/: LeggedHWSim.cpp
src/legged_gazebo/worlds/: empty_world.world
src/legged_hw/include/legged_hw/: LeggedHW.h  LeggedHWLoop.h
src/legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
src/legged_interface/: CMakeLists.txt  package.xml
src/legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  SwitchedModelReferenceManager.h
src/legged_interface/include/legged_interface/common/: ModelSettings.h  Types.h  utils.h
src/legged_interface/include/legged_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  XYLimitConstraint.h  XYReferenceConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
src/legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
src/legged_interface/include/legged_interface/foot_planner/: SplineCpg.h  (+4 more)
src/legged_interface/launch/: legged_robot_sqp.launch
src/legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
src/legged_interface/src/common/: ModelSettings.cpp
src/legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  XYLimitConstraint.cpp  XYReferenceConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
src/legged_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
src/legged_interface/src/foot_planner/: CubicSpline.cpp  InverseKinematics.cpp  MultiCubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
src/legged_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
src/legged_interface/src/initialization/: LeggedRobotInitializer.cpp
src/legged_interface/src/test/: LeggedRobotDummyNode.cpp  LeggedRobotSqpMpcNode.cpp
src/legged_interface/src/visualization/: LeggedRobotVisualizer.cpp
src/legged_wbc/: CMakeLists.txt  package.xml
src/legged_wbc/include/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
src/legged_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
src/legged_wbc/test/: HoQp_test.cpp
src/qpoases_catkin/: CMakeLists.txt
(+9 files in other folders)
