<?xml version="1.0"?>
<package format="2">
  <name>legged_dm_hw</name>
  <version>0.0.0</version>
  <description>ROS-control hardware interface for DM legged robots (direct CAN via PC)</description>
  <maintainer email="contact@mdmbot.com">dm</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dm_hw</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>serial</depend>
</package>
